pmix.sty: add new environments and commands for new use case chapter
copySignature and pasteSignature are used to capture and re-use the C
definition of various interfaces. useful for the upcoming use cases
chaper which will want to include copies of the signatures without
creating duplicates in the source code.

also adds a few shorthand commands for headers

--- a/pmix.sty
+++ b/pmix.sty
@@ -455,6 +455,30 @@
 \newcommand{\refAttributeItem}[1]{\index[index_attribute]{#1}\hyperref[attr:#1]{\code{#1}}}
 \newcommand{\refattr}[1]{\refAttributeItem{#1}}
 
+\newenvironment{signature}[1]{
+\versionMarker{#1}
+\cspecificstart
+\begin{codepar}
+}{
+\end{codepar}
+\cspecificend
+}
+
+\newcommand{\copySignature}[3]{
+  \StdCopyEcho{sig:#1}{
+    \begin{signature}{#2}
+      #3
+    \end{signature}
+  }
+}
+
+\newcommand{\pasteSignature}[1]{
+  \StdPaste{sig:#1}
+}
+
+\newlength{\sigspace}
+\setlength{\sigspace}{0.083in} % width of the bolded, monospace characters used in codepar env
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Code and placeholder semantic tagging.
 %
