use cases: add new appendix for use cases
Signed-off-by: @stevwonder

Co-authored-by: Swaroop Pophale <swaroop.pophale23@gmail.com>
Co-authored-by: Joshua Hursey <jhursey@us.ibm.com>

--- a/pmix-standard.tex
+++ b/pmix-standard.tex
@@ -237,6 +237,9 @@
     % Python bindings
     \input{App_Python}
 
+    % Use-Cases
+    \input{App_Use_Cases.tex}
+
 % Revisions, Acknowledgements
     % Revisions
     \input{Chap_Revisions.tex}
